<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/glav"
            android:title="@string/menug" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/wsr_icon"
            android:title="@string/world" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/mob"
            android:title="@string/compe" />
        <item
            android:id="@+id/po"
            android:icon="@drawable/po_logo"
            android:title="@string/po" />
    </group>
</menu>